--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "chalk": "^0.5.1",
+    "clui": "^0.3.1",
     "commander": "^2.6.0",
     "exec-sync": "^0.1.6",
     "fs.extra": "^1.3.2",
