--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "exec-sync": "^0.1.6",
     "fs.extra": "^1.3.2",
     "inquirer": "^0.8.0",
-    "replacestream": "^2.0.0"
+    "replacestream": "^2.0.0",
+    "underscore": "^1.8.2"
   },
   "devDependencies": {
     "jasmine-node": "latest",
