--- a/package.json
+++ b/package.json
@@ -7,5 +7,19 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "GPLv3"
+  "license": "GPLv3",
+  "dependencies": {
+    "chalk": "^0.5.1",
+    "clui": "^0.3.1",
+    "commander": "^2.6.0",
+    "exec-sync": "^0.1.6",
+    "fs.extra": "^1.3.2",
+    "inquirer": "^0.8.0",
+    "replacestream": "^2.0.0",
+    "underscore": "^1.8.2"
+  },
+  "devDependencies": {
+    "jasmine-node": "latest",
+    "release-it": "0.0.15"
+  }
 }
