--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "fs.extra": "^1.3.2",
     "inquirer": "^0.8.0",
     "replacestream": "^2.0.0",
-    "underscore": "^1.8.2"
+    "underscore": "^1.8.2",
+    "rsvp": "~3.0.18"
   },
   "devDependencies": {
     "jasmine-node": "latest",
