--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "inquirer": "^0.8.0",
     "replacestream": "^2.0.0",
     "underscore": "^1.8.2",
-    "rsvp": "~3.0.18"
+    "rsvp": "~3.0.18",
+    "minimist": "~1.1.1"
   },
   "devDependencies": {
     "jasmine-node": "latest",
