--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "¡Hola, esto es huayra-alias!",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jasmine-node sprc/*spec.js"
   },
   "author": "",
   "license": "GPLv3",
@@ -15,10 +15,10 @@
     "exec-sync": "^0.1.6",
     "fs.extra": "^1.3.2",
     "inquirer": "^0.8.0",
+    "minimist": "~1.1.1",
     "replacestream": "^2.0.0",
-    "underscore": "^1.8.2",
     "rsvp": "~3.0.18",
-    "minimist": "~1.1.1"
+    "underscore": "^1.8.2"
   },
   "devDependencies": {
     "jasmine-node": "latest",
