--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "minimist": "~1.1.1",
     "replacestream": "^2.0.0",
     "rsvp": "~3.0.18",
-    "underscore": "^1.8.2"
+    "underscore": "^1.8.2",
+    "strftime": "~0.9.0"
   },
   "devDependencies": {
     "jasmine-node": "latest",
