--- a/debian/control
+++ b/debian/control
@@ -9,6 +9,6 @@ Vcs-Browser: https://github.com/HuayraLinux/huayra-caripela
 
 Package: huayra-alias
 Architecture: all
-Depends: ${shlibs:Depends}, ${misc:Depends}, node-webkit (>= 0.11.2.4)
+Depends: ${shlibs:Depends}, ${misc:Depends}
 Description: Descripcion
  Descripcion larga.
